[package]
name = "mikiai"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
awc = "3.5.1"
lazy_static = "1.4"
log = "0.4"
log4rs = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-rustls"] }
aliyun-oss-rust-sdk = { version = "0.2.1" }
wechat-pay-rust-sdk = { version = "0.2.17", features = ["debug-print"] }
